fix contact us alignment

--- a/src/app/pages/contact-us/contact-us.component.scss
+++ b/src/app/pages/contact-us/contact-us.component.scss
@@ -30,7 +30,7 @@
 
       .contact-details {
         display: flex;
-        justify-content: justify;
+        justify-content: center;
         gap: 3rem;
         margin-bottom: 2rem;
 
